--- a/appsscript.json
+++ b/appsscript.json
@@ -34,6 +34,11 @@
         {
           "label": "Invoice Reminder",
           "runFunction": "createTrigger"
+        },
+
+        {
+          "label": "Complete Transaction",
+          "runFunction": "completeTransaction"
         }
       ]
     },
