--- a/appsscript.json
+++ b/appsscript.json
@@ -21,7 +21,9 @@
     "https://www.googleapis.com/auth/drive.readonly",
     "https://www.googleapis.com/auth/drive.file",
     "https://www.googleapis.com/auth/script.send_mail",
-    "https://www.googleapis.com/auth/script.scriptapp"
+    "https://www.googleapis.com/auth/script.scriptapp",
+    "https://www.googleapis.com/auth/script.container.ui",
+    "https://www.googleapis.com/auth/script.external_request"
   ],
   "addOns": {
     "common": {
@@ -38,6 +40,10 @@
         {
           "label": "Home Page",
           "runFunction": "onSheet"
+        },
+        {
+          "label": "Documentation",
+          "runFunction": "onDocs"
         }
       ]
     },
